Seeing if extra bottom margin will fix working on mobile.

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 	height: 100vh;
 	width: 100vw;
 	display: block;
-	margin-bottom: 100vh;
+	margin-bottom: 200vh;
 	position: relative;
 	z-index: 2;
 }
